--- a/ansible/playbooks/common.yml
+++ b/ansible/playbooks/common.yml
@@ -6,7 +6,7 @@
   task: 
     - name: install all initial packages
       yum: 
-        name: ['man', 'man-pages', 'mlocate', 'vim', 'bind-utils']
+        name: ['man', 'man-pages', 'mlocate', 'vim', 'bind-utils', 'git', 'python3']
 
         state: lastest
 
