--- a/ansible/playbooks/common.yml
+++ b/ansible/playbooks/common.yml
@@ -1,13 +1,13 @@
 ---
 - name: Install initial packages
-  hosts: jenkins
+  hosts: nfs
 
   remote_user: ansible
   become: yes 
   tasks: 
     - name: install all initial packages
       yum: 
-        name: ['man', 'man-pages', 'mlocate', 'vim', 'bind-utils', 'git', 'python3', 'epel-release']
+        name: ['man', 'man-pages', 'mlocate', 'vim', 'bind-utils', 'git', 'python3', 'epel-release', 'sysstat']
 
         state: latest
 
