--- a/ansible/playbooks/ntpclient-common.yml
+++ b/ansible/playbooks/ntpclient-common.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install initial packages
-  hosts: web7
+  hosts: web6
 
   remote_user: ansible
   become: yes 
@@ -11,17 +11,23 @@
 
         state: latest
 
-    - name: Install chrony packages
+    - name: Install ntp packages
       yum: 
-        name: chrony
+        name: ntp
         state: latest 
 
-    - name: configure chrony 
+    - name: configure ntp
       template: 
-        src: /ansible/Pro-SavvySix/ansible/playbooks/templates/chrony.conf.j2
-        dest: /etc/chrony.conf
+        src: /ansible/Pro-SavvySix/ansible/playbooks/templates/ntp.conf.j2
+        dest: /etc/ntp
 
-    - name: start chronyd
+    - name: start ntp
       service:
-        name: chronyd
+        name: ntp
         state: started
+
+    - name: Stop and disable Chrony 
+      service: 
+        name: chronyd
+        state: stoped 
+        state: disabled
